--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
 		<link rel="stylesheet" href="game.css" />
 	</head>
 	<body>
-		<div class="page">
-			<h1><a href="#">Supertools</a> <span class="chevron">/</span> Mass flag videos!</h1>
-			<p>As a <b>Hero</b>, use the Mass Flag Videos tool to incite chaos for fun. Go for it!</p>
-			<div class="vid-grid"></div>
+		<div class="game">
+			<header>
+				Points:&nbsp;<span class="points">6500</span>
+				<div class="xp meter">
+					<span style="width: 25%"></span>
+				</div>
+				Level&nbsp;<span class="level">3</span>
+			</header>
+			<div class="page">
+				<h1><a href="#">Supertools</a> <span class="chevron">/</span> Mass flag videos!</h1>
+				<p>As a <b>Hero</b>, use the Mass Flag Videos tool to incite chaos for fun. Go for it!</p>
+				<div class="vid-grid"></div>
+			</div>
 		</div>
 		<script src="https://unpkg.com/jquery@3.1.1"></script>
 		<script src="https://unpkg.com/shufflejs@4.0.2"></script>
